--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "6.0.2",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.0.3",
@@ -13,7 +13,7 @@
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.3.1"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
